# wellmap

./: .bumpversion.cfg  .gitchangelog.rc  .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  README.rst  pyproject.toml  setup.py
.github/workflows/: python.yml  release.yml  test.yml  test_and_release.yml
bio96/: __init__.py  load.py  util.py  verify.py
docs/: .gitignore  Makefile  api_python.rst  api_r.rst  basic_usage.rst  basic_usage_python.rst  basic_usage_r.rst  basic_usage_with_r.rst  changelog.rst.mako  command_line.rst  conf.py  contributing.rst  deprecations.rst  example_layouts.rst  example_usage.rst  file_format.rst  getting_help.rst  index.rst  installation.rst  python_api.rst  related_software.rst  std_curve.csv  std_curve.toml  using_from_r.rst  well_formats.rst
docs/_ext/: example.py  hidden_section.py
docs/_static/css/: corrections.css  tweaks.css
docs/_static/js/: tweaks.js
docs/_templates/autosummary/: class.rst
docs/basic_usage/: std_curve.R  std_curve.csv  std_curve.ipynb  std_curve.py  std_curve.toml
docs/basic_usage/.ipynb_checkpoints/: std_curve-checkpoint.ipynb
docs/example_layouts/: .gitignore  beta_gal_assay.rst  beta_gal_assay.toml  bradford_assay.rst  bradford_assay.toml  bradford_standards.toml  qpcr_timecourse.rst  qpcr_timecourse.toml
docs/example_usage/: dummy_analysis.py  penicillin_resistance.toml
docs/manuscript/: .gitignore  bmc_article.bib  bmc_article.tex  branding  cover_letter.lyx  journals.txt  reviewer_comments.txt  reviewer_response_letter.txt
docs/manuscript/figures/: bradford_assay.toml  plot_bradford.sh  plot_well_groups.sh  std.toml  well_groups.toml  well_groups_1.toml  well_groups_2.toml
docs/slides/: bio96_pitch.odp  bradford.toml  bradford_assay.toml  bradford_standards.toml  simple_1.py  simple_1.toml  simple_2.toml  wellmap_pitch.odp
tests/: __init__.py  conftest.py  param_helpers.py  pytest.ini  test_config_error.py  test_config_from_toml.nt  test_config_from_toml.py  test_configdict.py  test_get_dotted_key.py  test_iter_ij_in_block.py  test_iter_wells_in_block.py  test_load.nt  test_load.py  test_path_manager.nt  test_path_manager.py  test_plot.nt  test_plot.py  test_recursive_merge.py  test_resolve_path.py  test_shift_config.nt  test_shift_config.py  test_table_from_config.nt  test_table_from_config.py  test_table_from_wells.nt  test_table_from_wells.py  test_util.nt  test_util.py  test_verify.py  test_wells_from_config.py
tests/plot/: colors_viridis.toml  skip_wells.toml  sort_concave.toml  sort_dates.toml  sort_numbers.toml  sort_plate.toml  two_attrs.toml
tests/toml/: alert.toml  col_without_row.toml  concat_alert.toml  concat_extras.toml  err_concat_nonexistent.toml  err_concat_wrong_type.toml  err_include_dict.toml  err_include_nonexistent.toml  extras.toml  icol_without_row.toml  include_alert.toml  include_concat.toml  include_extras.toml  include_two_extras.toml  irow_without_col.toml  just_alert.toml  just_concat.toml  just_extras_ab.toml  just_extras_abc.toml  nested_concats.toml  nested_includes.toml  one_concat.toml  one_include.toml  one_plate.csv  one_plate.toml  one_plate.xlsx  one_well.toml  one_well_xy.csv  one_well_xy.toml  one_well_xy_alert.toml  one_well_xy_extras.toml  one_well_xy_extras.xlsx  one_well_xyz.csv  one_well_xyz.toml  one_well_xyz.xlsx  reasonably_complex.toml  row_without_col.toml  two_concats.toml  two_concats_dict.toml  two_includes.toml  (+3 more)
tests/verify/: long_labels.toml  nan_first.toml  no_attrs.toml  one_attr.toml  one_value.toml  reasonably_complex_1.toml  reasonably_complex_2.toml  skip_wells.toml  sort_dates.toml  sort_numbers.toml  sort_strings.toml  test_verify.py
wellmap/: __init__.py  file.py  load.py  plot.py  util.py  verify.py
wellmapr/: DESCRIPTION  NAMESPACE
wellmapr/R/: wellmapr.R
wellmapr/man/: Style.Rd  col_from_j.Rd  i_from_row.Rd  ij_from_row_col.Rd  ij_from_well.Rd  iter_col_indices.Rd  iter_ij_in_block.Rd  iter_row_indices.Rd  iter_well_indices.Rd  j_from_col.Rd  load.Rd  row_col_from_ij.Rd  row_col_from_well.Rd  row_from_i.Rd  show.Rd  show_df.Rd  well0_from_row_col.Rd  well0_from_well.Rd  well_from_ij.Rd  well_from_row_col.Rd
wellmapr/tests/: testthat.R
wellmapr/tests/testthat/: test_load.R  test_show.R  test_utils.R  toml
wellmapr/tests/testthat/toml/: one_well_xy_extras.csv  one_well_xy_extras.toml  three_wells.toml  two_wells.toml
