[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wellmap"
authors = [
  {name = "Kale Kundert", email = "kale@thekunderts.net"},
]
readme = "README.rst"
dynamic = ["version", "description"]
requires-python = "~=3.7"
dependencies = [
  'pandas',
  'tomli >= 1.1.0 ; python_version < "3.11"',
  'typing-extensions; python_version < "3.9"',
  'inform >= 1.15',
  'docopt',      # gui
  'matplotlib',  # gui
  'colorcet',    # gui
]
classifiers = [
    'Programming Language :: Python :: 3.7',
]

[project.optional-dependencies]
test = [
  'pytest==7.4.2',
  'pytest-cov==4.1.0',
  'pytest-subtests==0.11.0',
  'pytest-unordered==0.5.2',
  'parametrize_from_file==0.18.0',
  'hypothesis==6.79.4',   # last version with support for python 3.7
  'coveralls',
]
doc = [
  'sphinx==5.3.0',        # last version with support for python 3.7
  'sphinx-rtd-theme==1.3.0',
  'sphinxcontrib-programoutput==0.17',
  'sphinx-issues==3.0.1',
  'myst-parser==1.0.0',   # last version with support for python 3.7
]

[project.scripts]
wellmap = "wellmap.plot:main"

[project.urls]
'Documentation' = 'https://wellmap.readthedocs.io/en/latest/'
'Version Control' = 'https://github.com/kalekundert/wellmap'
'Bug Tracker' = 'https://github.com/kalekundert/wellmap/issues'
'Continuous Integration' = 'https://travis-ci.org/kalekundert/wellmap'
'Test Coverage' = 'https://coveralls.io/github/kalekundert/wellmap'

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:A private pytest class or function was used.',
]
addopts = "--doctest-glob='*.rst'"

[tool.semantic_release]
build_command = 'python -m pip install flit && flit build'
version_variable = 'wellmap/__init__.py:__version__'
version_pattern = [
    'wellmapr/DESCRIPTION:Version: {version}',
    'wellmapr/DESCRIPTION:list\(package = "wellmap", version = "{version}"'
]

[tool.ruff]
target-version = "py37"
select = ["F"]
ignore = ["F405", "F403"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
